--- a/style.css
+++ b/style.css
@@ -41,3 +41,9 @@ body {
   box-shadow: none;
   transform: translateY(2px);
 }
+
+.box {
+  background: yellow;
+  height: 125px;
+  width: 125px;
+}
