--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ body {
   transform: translateY(2px);
 }
 
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  height: 500px;
+  width: 500px;
+}
+
 .box {
   background: yellow;
   height: 125px;
