add styles to class box

--- a/style.css
+++ b/style.css
@@ -57,7 +57,10 @@ body {
 }
 
 .box {
-  background: yellow;
+  background-image: url('https://media.giphy.com/media/EZqwsBSPlvSda/giphy.gif');
+  background-repeat: no-repeat;
+  background-size: 500px 500px;
+  position: relative;
   height: 125px;
   width: 125px;
 }
