add styles to class boxes

--- a/style.css
+++ b/style.css
@@ -56,6 +56,10 @@ body {
   height: 600px;
 }
 
+.boxes.big .box {
+  transform: rotateZ(360deg);
+}
+
 .box {
   background-image: url('https://media.giphy.com/media/EZqwsBSPlvSda/giphy.gif');
   background-repeat: no-repeat;
@@ -63,4 +67,5 @@ body {
   position: relative;
   height: 125px;
   width: 125px;
+  transition: 0.4s ease;
 }
